Refactor MatrixOp implementation and enhance testing; update launch, tasks, and settings for improved debugging and functionality

--- a/Polimorfismo - Aaron Hernandez/.vscode/settings.json
+++ b/Polimorfismo - Aaron Hernandez/.vscode/settings.json
@@ -49,7 +49,8 @@
         "streambuf": "cpp",
         "text_encoding": "cpp",
         "typeinfo": "cpp",
-        "variant": "cpp"
+        "variant": "cpp",
+        "cassert": "cpp"
     },
-    "C_Cpp.errorSquiggles": "disabled"
+    "C_Cpp.errorSquiggles": "enabled"
 }
